fixed index problem overlap

--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -1,7 +1,7 @@
 .banner-container
   display: flex
   flex-flow: column
-  height: 100vh
+  height: calc(100% - 94px)
   justify-content: center
   div
     min-height: 250px
